# ai-failure-platform

./: .env.example  .gitignore  pyproject.toml  requirements.txt  tmp_upload_check.py
data/: project_failure.db
src/api/: app.py
src/auth/: security.py
src/core/: __init__.py  config.py  logging.py
src/database/: models.py  session.py
src/pipeline/: __init__.py  data_generator.py  preprocessor.py  train_ml.py
src/ui/: dashboard.py
tests/: test_database_session.py  test_preprocessor.py
