[project]
name = "ai-failure-platform"
version = "2.0.0"
description = "Enterprise AI Project Failure Risk Intelligence Backend Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.6.4",
    "python-multipart>=0.0.9",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.1",
    "joblib>=1.3.2",
    "python-dotenv>=1.0.1"
]

[tool.black]
line-length = 100
target-version = ['py311']